Bug 1127288 - add header for DRM checkbox, fix link alignment, r=dolske
UltraBlame original commit: 1c1df7f43de067cfd0df27e16f7bfe0d92e9ac69

--- a/browser/themes/shared/incontentprefs/preferences.inc.css
+++ b/browser/themes/shared/incontentprefs/preferences.inc.css
@@ -183,6 +183,13 @@ treecol {
 }
 
 
+#playDRMContentLink {
+  
+  margin-left: 4px !important;
+  margin-right: 4px !important;
+}
+
+
 
 #applicationsContent {
   padding: 15px 0;
